Remove Parameter Filter
